# ark-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
arkmanager/: __init__.py  __main__.py  archive_backend.py  dialogs.py  encoding_utils.py  hash_tools.py  i18n.py  install_integration.py  john_backend.py  main_window.py  themes.py
docs/: architecture.md  product.md  usage.md
packaging/appimage/: build-appimage.sh
packaging/deb/: build-deb.sh
packaging/flatpak/: io.github.arkmanager.ArkManager.yml
packaging/rpm/: arkmanager.spec  build-rpm.sh
resources/: arkmanager.desktop  generate_icon.py
tests/: __init__.py  conftest.py  test_archive_backend.py  test_encoding_utils.py  test_john_backend.py  test_main_window.py
